Fixed spacing

--- a/css/top-section.css
+++ b/css/top-section.css
@@ -138,10 +138,15 @@ form {
 	margin-right: 1rem;
 }
 
+.header-under {
+	margin-top: 2rem;
+	margin-bottom: .5rem;
+}
+
 .header-under h4 {
 	font-family: "GT-Walsheim-Thin";
 	color: #ffffff;
-	margin-top: 2rem;
+	
 }
 
 .header-under input {
